--- a/index.html
+++ b/index.html
@@ -32,7 +32,27 @@
             </tr>
           </tbody>
         </table>
-      </div>            
+      </div> 
+      <div class="row">
+        <form class='form-inline'>
+          <div class="form-group">
+            <input type="text" class="form-control">
+            <label class="control-label">
+              {{novoJogo.casa.time.nome}}
+              <img :src="novoJogo.casa.time.escudo" style="height:30px; width:30px;">
+            </label>          
+          </div>
+          <span>X</span>
+          <div class="form-group">
+            <label>
+              <img :src="novoJogo.fora.time.escudo" style="height:30px; width:30px">
+              {{novoJogo.fora.time.nome}}
+            </label>
+            <input type="text" class="form-control">
+          </div>
+          <button type="button" class="btn btn-primary"> Fim de Jogo </button>
+        </form>
+      </div>           
     </div>
     <script src="/dist/build.js"></script>
   </body>
