--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
         <h3>Campeonato Brasileiro - Série A 2016</h3>   
         <a href="#" class='btn btn-primary' @click.prevent="createNovoJogo">Novo Jogo</a>     
         <div class="row" v-if=" view == 'tabela'">
+        <input type="text" class="form-control" v-model="filter">
         <table class="table table-striped">
           <thead>
             <tr>
-              <th v-for="coluna in colunas">{{coluna | ucwords}}</th>                          
+              <th v-for="coluna in colunas">
+                  <a href="#" @click.prevent="sortBy(coluna)">{{coluna | ucwords}}</a>
+                </th>                          
             </tr>
           </thead>
           <tbody>
-            <tr v-for="time in times">
+            <tr v-for="time in timesFiltered">
               <td>
                 <img :src="time.escudo" style="height:30px; width:30px">
                 <strong>{{time.nome}}</strong>
